--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
 						<img src="img/Men/Sportswear/68.png">
 						<div class="content">
 							<h3>Men's Sportswear</h3>
-							<h4>Price: Rs 500</h4>
+							<h4><span class="product-colour">Colour: Red</span><span class="product-size">Size: S</span>Price: Rs 500</h4>
 							<p class="unit">Quantity: <input name="" value="2"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
@@ -29,7 +29,7 @@
 						<img src="img/Women/Dress/79.png">
 						<div class="content">
 							<h3>Woman's Dress</h3>
-							<h4>Price: Rs 400</h4>
+							<h4><span class="product-colour">Colour: Blue</span><span class="product-size">Size: L</span>Price: Rs 400</h4>
 							<p class="unit">Quantity: <input name="" value="1"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
@@ -38,7 +38,7 @@
 						<img src="img/Women/Shirts_Blouse/4.png">
 						<div class="content">
 							<h3>Woman's Blouse</h3>
-							<h4>Price: Rs 300</h4>
+							<h4><span class="product-colour">Colour: Yellow</span><span class="product-size">Size: M</span>Price: Rs 300</h4>
 							<p class="unit">Quantity: <input name="" value="0"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
@@ -49,7 +49,9 @@
 					<hr>
 					<p><span>Tax (5%)</span> <span>Rs 60</span></p>
 					<hr>
-					<p><span>Total (After Tax) </span> <span>Rs 1260</span></p><a href="#"><i class="fa fa-shopping-cart"></i>Checkout</a>
+					<p><span>Total (After Tax) </span> <span>Rs 1260</span></p>
+					<a href="#" class="checkout-link"><i class="fa fa-shopping-cart"></i>Checkout</a>
+					<a href="searchproduct.html" class="shop-link">Continue Shopping</a>
 				</div>
 			</div>
 		</div>
