--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
 					<p><span>Tax (5%)</span> <span>Rs 60</span></p>
 					<hr>
 					<p><span>Total (After Tax) </span> <span>Rs 1260</span></p>
-					<a href="#" class="checkout-link"><i class="fa fa-shopping-cart"></i>Checkout</a>
+					<a href="checkout.html" class="checkout-link"><i class="fa fa-shopping-cart"></i>Checkout</a>
 					<a href="searchproduct.html" class="shop-link">Continue Shopping</a>
 				</div>
 			</div>
