--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 			<meta charset="UTF-8">
 			<title>Shopping Cart</title>
 
-			<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+   	 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
 			<link rel="stylesheet" href="css/cart.css">
 	</head>
@@ -45,11 +45,11 @@
 					</div>
 				</div>
 				<div class="right-bar">
-					<p><span>Subtotal</span> <span>Rs 1200</span></p>
+					<p><span>Subtotal</span> <span class="subtotal">Rs 1200</span></p>
 					<hr>
-					<p><span>Tax (5%)</span> <span>Rs 60</span></p>
+					<p><span>Tax (5%)</span> <span class="tax">Rs 60</span></p>
 					<hr>
-					<p><span>Total (After Tax) </span> <span>Rs 1260</span></p>
+					<p><span>Total</span> <span class="total">Rs 1260</span></p>
 					<a href="checkout.html" class="checkout-link"><i class="fa fa-shopping-cart"></i>Checkout</a>
 					<a href="searchproduct.html" class="shop-link">Continue Shopping</a>
 				</div>
