--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<h3>Men's Sportswear</h3>
 							<h4><span class="product-colour">Colour: Red</span><span class="product-size">Size: S</span>Price: Rs 500</h4>
-							<p class="unit">Quantity: <input name="" value="2"></p>
+							<p class="unit">Quantity: <input type="number" name="" value="2"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
 					</div>
@@ -30,7 +30,7 @@
 						<div class="content">
 							<h3>Woman's Dress</h3>
 							<h4><span class="product-colour">Colour: Blue</span><span class="product-size">Size: L</span>Price: Rs 400</h4>
-							<p class="unit">Quantity: <input name="" value="1"></p>
+							<p class="unit">Quantity: <input type="number" name="" value="1"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
 					</div>
@@ -39,7 +39,7 @@
 						<div class="content">
 							<h3>Woman's Blouse</h3>
 							<h4><span class="product-colour">Colour: Yellow</span><span class="product-size">Size: M</span>Price: Rs 300</h4>
-							<p class="unit">Quantity: <input name="" value="0"></p>
+							<p class="unit">Quantity: <input type="number" name="" value="0"></p>
 							<p class="btn-area"><i aria-hidden="true" class="fa fa-trash"></i> <span class="btn2">Remove</span></p>
 						</div>
 					</div>
