--- a/checkout.html
+++ b/checkout.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="input_group">
                     <div class="input_box">
-                        <input type="tel" name="" class="name" placeholder="Card Number 1111-2222-3333-4444" required>
+                        <input type="tel" type="number" name="" class="name" placeholder="Card Number 1111-2222-3333-4444" required>
                         <i class="fa fa-credit-card icon"></i>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                         <div class="content">
                             <h3>Men's Sportswear</h3>
                             <h4><span class="product-colour">Colour: Red</span><span class="product-size">Size: S</span>Price: Rs 500</h4>
-                            <p class="unit">Quantity: <input name="" value="2"></p>
+                            <p class="unit">Quantity: <input type="number" name="" value="2"></p>
                         </div>
                     </div>
                     <div class="box">
@@ -128,7 +128,7 @@
                         <div class="content">
                             <h3>Woman's Dress</h3>
 	                        <h4><span class="product-colour">Colour: Blue</span><span class="product-size">Size: L</span>Price: Rs 400</h4>
-                            <p class="unit">Quantity: <input name="" value="1"></p>
+                            <p class="unit">Quantity: <input type="number" name="" value="1"></p>
                         </div>
                     </div>
                     <div class="box">
@@ -136,7 +136,7 @@
                         <div class="content">
                             <h3>Woman's Blouse</h3>
 							<h4><span class="product-colour">Colour: Yellow</span><span class="product-size">Size: M</span>Price: Rs 300</h4>
-                            <p class="unit">Quantity: <input name="" value="0"></p>
+                            <p class="unit">Quantity: <input type="number" name="" value="0"></p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
 					<p><span>Tax (5%)</span> <span class="tax">Rs 60</span></p>
 					<hr>
 					<p><span>Total</span> <span class="total">Rs 1260</span></p>
-                    <a href="checkout.html" class="checkout-link"><i class="fa fa-shopping-cart"></i>Back to cart</a>
+                    <a href="cart.html" class="checkout-link"><i class="fa fa-shopping-cart"></i>Back to cart</a>
                 </div>
             </div>
         </div>
