--- a/signin.html
+++ b/signin.html
@@ -18,7 +18,7 @@
     <img src = "img/loader.gif" class="loader" alt="">
 
     <div class="container">
-        <img src = "img/logo.jpeg" class="logo" alt="">
+        <a href="index.html"><img src="img/logo.jpeg" class="logo" alt=""></a>
         <div>
             <input type ="text" autocomplete ="off" id ="username" placeholder ="username">
             <input type ="password" autocomplete ="off" id ="password" placeholder ="password">
