Co-authored-by: hdsmathew <hdsmathew@users.noreply.github.com>

--- a/searchproduct.html
+++ b/searchproduct.html
@@ -82,7 +82,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Women/Dress/81.png" class="product-thumb" alt="">;
+                        <img src ="img/Women/Dress/81.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -94,7 +94,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Men/Trousers/58.png" class="product-thumb" alt="">;
+                        <img src ="img/Men/Trousers/58.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -106,7 +106,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Women/Joggers/35.png" class="product-thumb" alt="">;
+                        <img src ="img/Women/Joggers/35.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -118,7 +118,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Men/Shoes/62.png" class="product-thumb" alt="">;
+                        <img src ="img/Men/Shoes/62.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -130,7 +130,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Women/Sportswear/29.png" class="product-thumb" alt="">;
+                        <img src ="img/Women/Sportswear/29.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -142,7 +142,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Men/Jeans/55.png" class="product-thumb" alt="">;
+                        <img src ="img/Men/Jeans/55.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -154,7 +154,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Women/Shirts_Blouse/4.png" class="product-thumb" alt="">;
+                        <img src ="img/Women/Shirts_Blouse/4.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
@@ -166,7 +166,7 @@
                 <div class = "product-card">
                     <div class = "product-image">
                         <span class = "discount-tag">50% off</span>
-                        <img src ="img/Men/Trousers/59.png" class="product-thumb" alt="">;
+                        <img src ="img/Men/Trousers/59.png" class="product-thumb" alt="">
                         <button class="card-btn">Add To Cart</button>
                     </div>
                     <div class = "product-info">
