--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,8 @@
     <div class="container">
         <a href="index.html"><img src="img/logo.jpeg" class="logo" alt=""></a>
         
-        <input type ="text" autocomplete ="off" id ="fullname" placeholder ="full name">
+        <input type ="text" autocomplete ="off" id ="firstname" placeholder ="first name">
+        <input type ="text" autocomplete ="off" id ="firstname" placeholder ="first name">
         <input type ="text" autocomplete ="off" id ="username" placeholder ="username">
         <input type ="email" autocomplete ="off" id ="email" placeholder ="email">
         <input type ="password" autocomplete ="off" id ="password" placeholder ="password">
